# rbot

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  copyright.txt  exchange.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  release_build.yml  release_wheel.yml  ubuntu_simple_build.yml
MEMO/: changes.txt  channel.txt  note.txt
bar/: Cargo.toml
bar/src/: lib.rs
doc/: environment.md
exchanges/binance/: Cargo.toml
exchanges/binance.bak/src/: lib.rs  market.rs  privatews.rs  publicws.rs
exchanges/binance/src/: config.rs  lib.rs  market.rs  message.rs  rest.rs  ws.rs
exchanges/bitbank/: Cargo.toml
exchanges/bitbank/src/: config.rs  lib.rs  market.rs  message.rs  rest.rs  socket.rs  ws.rs
exchanges/bitflyer/: Cargo.toml
exchanges/bitflyer/src/: market.rs  message.rs  rest.rs
exchanges/bybit/: Cargo.toml
exchanges/bybit/src/: archive_test.rs  config.rs  lib.rs  market.rs  message.rs  rest.rs  ws.rs
exchanges/ccxt/: Cargo.toml
exchanges/example/: Cargo.toml
exchanges/hyperliquid/: Cargo.toml
exchanges/hyperliquid/src/: lib.rs  market.rs  message.rs  rest.rs  ws.rs
modules/ccxt/: Cargo.toml
modules/ccxt/src/: ccxt_config.rs  exchange.json  lib.rs
modules/rbot_lib/: Cargo.toml
modules/rbot_lib/src/: lib.rs
modules/rbot_lib/src/common/: bar.py  bar.rs  ccxt_config.rs  ch.rs  config.rs  env.rs  exchange.json  hub.rs  logger.rs  mod.rs  order.rs  orderbook.rs  time.rs  util.rs
modules/rbot_lib/src/db/: archive.rs  df.rs  fs.rs  sqlite.rs  tradedf.rs
modules/rbot_lib/src/net/: mod.rs  rest.rs  ws.rs
modules/rbot_lib/src/net/ccxt/: ccxt_api.py  ccxt_api.rs  message.rs  mod.rs  test_ccxt.py
modules/rbot_market/: Cargo.toml
modules/rbot_market/src/: lib.rs  market.rs
modules/rbot_server/: Cargo.toml
modules/rbot_server/src/: lib.rs
modules/rbot_session/: Cargo.toml
modules/rbot_session/src/: lib.rs  logger.rs  mod_test.rs  orderlist.rs  python_if.rs  runner.rs  session.rs
python/rbot/: __init__.py
python/rbot/chart/: __init__.py
rbot/: Cargo.toml  README.md  pyproject.toml  requirements.txt
rbot/python/rbot/: __init__.py  rest.py
rbot/src/: lib.rs  test.rs
rbot/src/test/: breakout.ipynb  breakout.py  market_drop_table.ipynb  ohlcv.ipynb
rbot/src/test/binance_test/: download.py  log_load.ipynb  market_dry_order.ipynb
rbot/src/test/bybit_test/: market.ipynb
rbot/src/test/manual/: =
rbot/src/test/polars/: polars_test.ipynb
rbot/src/test/tutorial/: basilbot_real_testnet.ipynb
rbot/test/binance_test/: backtest.ipynb  best_price.py  download.py  market.ipynb  nullagent.py
rbot/test/bybit_test/: bybit.ipynb  bybit_main.py  market.ipynb  market_symbol.ipynb  nullagent.py  runner.py  warmup.py
rbot/test/manual/: binance_market.ipynb  binance_order.ipynb  session.ipynb
rbot/test/plotly/: realtime.ipynb
rbot/test/tutorial/: basilbot_backtest.ipynb
rbot_blockon/: Cargo.toml
rbot_blockon/src/: lib.rs
rbot_lib/: Cargo.toml
rbot_lib/src/common/: bar.rs  calc_class.rs  ch.rs  config.rs  env.rs  hub.rs  logger.rs  mod.rs  order.rs  orderbook.rs  text_message.rs  time.rs  util.rs
rbot_lib/src/db/: archive.rs  avro.rs  compress.rs  df.rs  fs.rs  mod.rs  sqlite.rs  tradedf.rs
rbot_lib/src/net/: mod.rs  rest.rs  udp.rs  ws.rs
rbot_market/: Cargo.toml
rbot_market/src/: market.rs
rbot_server/: Cargo.toml
rbot_server/src/: lib.rs  server.rs
rbot_session/: Cargo.toml
rbot_session/src/: lib.rs  logger.rs  mod_test.rs  python_if.rs  runner.rs  session.rs
src/: TODO.txt  lib.rs
src/common/: ch.rs  config.rs  env.rs  logger.rs  mod.rs  order.rs  time.rs
src/db/: df.rs  hdf.rs  mod.rs  polars_test.rs  sqlite.rs
src/exchange/: account  mod.rs  orderbook.rs  rest.rs  ws.rs
src/exchange/bb/: message.rs  mod.rs  rest.rs  ws.rs
src/exchange/binance/: config.rs  market.rs  message.rs  mod.rs  rest.rs  ws.rs
src/exchange/bitbank/: mod.rs
src/exchange/bitflyer/: config.rs  market.rs  message.rs  mod.rs  rest.rs
src/exchange/bybit/: config.rs  market.rs  message.rs  mod.rs  rest.rs  ws.rs
src/exchange/ftx/: message.rs  mod.rs  rest.rs
src/exchange/skelton/: config.rs  market.rs  message.rs  mod.rs  rest.rs
src/exchange/wrap/: market.rs  mod.rs
src/fs/: mod.rs
src/net/: mod.rs  udp.rs
src/session/: logger.rs  mod.rs  mod_test.rs  orderlist.rs  orderlist.test.rs  python_if.rs  runner.rs  session.rs
src/sim/: back.rs  market.rs  mod.rs  session.rs
src/test/: analyze_ftx_log.ipynb  backtest.ipynb  backtest.py  bokeh.ipynb  breakout.ipynb  breakout.py  breakout_bb.py  main_test.py  null_agent.ipynb  nullagent.ipynb  ohlcv.ipynb  simple_test.py
src/test/binance_test/: backtest.csv  backtest.ipynb  best_price.ipynb  download.py  market.ipynb  market_dry_order.ipynb  market_stat.ipynb  mmbot.py  mmbotsample.py  nullagent.py  plotly.ipynb  session.ipynb  simpleagent.py  simpleagent_backtest.py  simpleagent_dryrun.py  userstream.py
src/test/bybit_test/: basilbot_backtest.ipynb  exchange_proxy.py  handler.py  main.py  market.ipynb  market.py  marketconfig_test.ipynb  nullagent.py
src/test/manual/: binance_market.ipynb  binance_order.ipynb  chart.ipynb  logger.ipynb  market.ipynb  time.ipynb  (+1 more)
test/00_suite/: test_00exchange.py  test_00exchange_order.py  test_01market.py  test_01market_basic.py  test_01market_download.py  test_01market_realtime.py  test_02_config.py  test_bitbank_order.py
test/00suite/: all_test.ipynb  test_00exchange.py  test_00exchange_order.py  test_01market.py  test_01market_basic.py  test_01market_cache.py  test_01market_download.py  test_01market_realtime.py
test/02_runner/: test_01_nullagent.py
test/binance_test/: download.py  session.ipynb
test/bitbank_test/: basilbot_backtest.ipynb  download.py  nullagent.py  test_market_basic.py
test/bybit_test/: basilbot_backtest.ipynb  bybit.ipynb  download.py  market.py  nullagent.py  skelton_real_run_testnet.ipynb
test/experiment/: cryptfeed.py
test/gui/: sample.py
test/manual/: time.ipynb
test/tutorial/: basilbot_backtest.ipynb  breakout_agent.ipynb
(+14 files in other folders)
