
[workspace]
members = [
    "rbot",
    "rbot_lib",
    "rbot_market",
    "rbot_session",
    "exchanges/binance",
    "exchanges/bitbank",
    "exchanges/bitflyer",
    "exchanges/bybit",
]

resolver = "2"

[workspace.dependencies]
rbot = { path = "./rbot" }
rbot_lib = { path = "./rbot_lib" }
rbot_session = { path = "./rbot_session" }
rbot_market = { path = "./rbot_market" }
binance = { path = "./exchanges/binance" }
bitbank = { path = "./exchanges/bitbank" }
bitflyer = { path = "./exchanges/bitflyer" }
bybit = { path = "./exchanges/bybit" }

anyhow = { version = "1.0.79" }

chrono = { version = "0.4.33" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_with = { version = "3.4.0" }
log = { version = "0.4" }
env_logger = { version = "0.11.0" }
directories = "5.0.1"

crossbeam-channel = { version = "0.5.11" }

thiserror = { version = "1.0.50" }

strum_macros = { version = "0.26.0" }
strum = { version = "0.26.0", features = ["derive"] }

async-stream = { version = "0.3.5" }
async-trait = { version = "0.1.77" }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14" }


rusqlite = { version = "0.30.0", features = ["bundled"] }


polars = { version = "0.35", features = ["lazy"] }
polars-core = { version = "0.35", features = [
    "ndarray",
    "temporal",
    "dtype-time",
    "object",
    "round_series",
] }
polars-lazy = { version = "0.35", features = [
    "dynamic_group_by",
    "round_series",
    "pivot",
] }
polars-time = { version = "0.35" }
polars-ops = { version = "0.35" }
pyo3-polars = { version = "0.9" }


ndarray = { version = "0.15" }
numpy = { version = "0.20" }

reqwest = { version = "0.11", features = ["blocking", "gzip"] }
futures = { version = "0.3" }
flate2 = { version = "1.0.24" }

csv = { version = "1.2.2" }
zip = { version = "0.6.6" }

tempfile = { version = "3.8.0" }

openssl = { version = "0.10.59", features = ["vendored"] }

url = { version = "2.4.0" }

rust_decimal = { version = "1.32.0" }
rust_decimal_macros = { version = "1.32.0" }

hmac = { version = "0.12.1" }
sha2 = { version = "0.10.7" }
hex = { version = "0.4.3" }

#tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }

async-std = { version = "1.12", features = ["attributes"] }

socket2 = { version = "0.5.5" }
rmp-serde = { version = "1.1.2" }
once_cell = { version = "1.19.0" }

#pyo3 = {version="0.20.2"}
