#[package]
#name = "rbot"
#version = "0.3.1"
#edition = "2021"


[workspace]

members = [
    "rbot",
    "rbot_lib",
    "rbot_market",
    "rbot_session",
    "rbot_server",
    "rbot_blockon",
    "rbot_server", 
    "rbot_blockon",
    "exchanges/bitbank",
    "exchanges/bitflyer",
    "exchanges/bybit", 
]

resolver = "2"

[workspace.package]
name = "rbot"
version = "0.3.2"
edition = "2021"

[workspace.dependencies]
rbot = { path = "./rbot" }
rbot_lib = { path = "./rbot_lib" }
rbot_blockon = { path = "./rbot_blockon" }
rbot_session = { path = "./rbot_session" }
rbot_market = { path = "./rbot_market" }
rbot_server = { path = "./rbot_server" }

bitbank = { path = "./exchanges/bitbank" }
bitflyer = { path = "./exchanges/bitflyer" }
bybit = { path = "./exchanges/bybit" }
binance = { path = "./exchanges/binance" }

anyhow = { version = "1.0.79" }

features = {version = "0.10.0"}

chrono = { version = "0.4.33" }
serde = { version = "1.0"}
serde_json = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_with = { version = "3.6.1" }

log = { version = "0.4" }
env_logger = { version = "0.11.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }

directories = "5.0.1"

crossbeam-channel = { version = "0.5.11" }

thiserror = { version = "1.0.50" }

strum_macros = { version = "0.26.0" }
strum = { version = "0.26.0", features = ["derive"] }

async-stream = { version = "0.3.5" }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14" }
async-trait = {version="0.1.81"}

rusqlite = { version = "0.32.0", features = ["bundled"] }
    
polars = { version = "0.41.3", features = [
        "lazy", 
        "ndarray", 
        "dtype-time", 
        "object",
         "round_series", 
         "temporal",
         "pivot",
         "dynamic_group_by",
         "polars-ops",
         "polars-plan",
         "cum_agg",
         "serde",
         "object",
         "list_to_struct",
         "decompress",
         "parquet"
        ]}

pyo3-polars = { version = "0.15.0" }
polars-io = {version = "0.41.3", features=["avro", "parquet"]}

arrow = "52.1.0"
parquet = "52.1.0"

ndarray = { version = "0.15" }
numpy = { version = "0.21.0" }

apache-avro = "0.16.0"

reqwest = { version = "0.12.2", features = ["blocking", "gzip", "stream"] }
futures = { version = "0.3" }
flate2 = { version = "1.0.24" }
async-compression = {version="0.4.11", features = ["all"] }

csv = { version = "1.2.2" }
zip = { version = "2.1.1" }

tempfile = { version = "3.8.0" }

openssl = { version = "0.10.59", features = ["vendored"] }

url = { version = "2.4.0" }

rust_decimal = { version = "1.32.0" }
rust_decimal_macros = { version = "1.32.0" }

hmac = { version = "0.12.1" }
sha2 = { version = "0.10.7" }
hex = { version = "0.4.3" }

#tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }

async-std = { version = "1.12", features = ["attributes"] }

socket2 = { version = "0.5.5" }
rmp-serde = { version = "1.1.2" }
once_cell = { version = "1.19.0" }

actix-web={version="4.5"}
actix-rt={version="2.9"}
