[package]
name = "rbot"
version = "0.1.8"       # for test pypi
# version = "0.4.0"     # for main release branch
edition = "2021"
exclude = ["test/**"]

[lib]
name = "rbot"
crate-type = ["cdylib", "rlib"]

[dependencies]
bybit = {path = "exchanges/bybit"}
binance = {path = "exchanges/binance"}
bitbank = {path= "exchanges/bitbank"}

rbot_lib = {path="modules/rbot_lib"}
rbot_session = {path="modules/rbot_session"}
rbot_server = {path="modules/rbot_server"}
rbot_market = {path="modules/rbot_market"}
pyo3 = { workspace = true, features = ["extension-module"] }


[workspace]


members = [
    "modules/rbot_lib",
    "modules/rbot_market",
    "modules/rbot_session",
    "modules/rbot_server",
    "modules/rbot_blockon",
    "modules/rbot_server",
    "modules/rbot_blockon",
    "exchanges/bitbank",
    "exchanges/bitflyer",
    "exchanges/bybit",
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
rbot_lib = {path="modules/rbot_lib"}
rbot_session = {path="modules/rbot_session"}
rbot_server = {path="modules/rbot_server"}
rbot_market = {path="modules/rbot_market"}
rbot_blockon = {path="modules/rbot_blockon"}

pyo3 = { version = "0.23.5", features = ["rust_decimal", "auto-initialize", "abi3-py38", "anyhow"] }

bitbank = { path = "./exchanges/bitbank" }
bitflyer = { path = "./exchanges/bitflyer" }
bybit = { path = "./exchanges/bybit" }
binance = { path = "./exchanges/binance" }

anyhow = { version = "1.0.79" }

features = {version = "0.10.0"}

chrono = { version = "0.4.33" }
serde = { version = "1.0"}
serde_json = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_with = { version = "3.6.1" }

log = { version = "0.4" }
env_logger = { version = "0.11.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }

env-file-reader = { version="0.3.0" }

directories = {version= "6.0.0"}

crossbeam-channel = { version = "0.5.11" }

thiserror = { version = "2.0.12" }

strum_macros = { version = "0.27.1" }
strum = { version = "0.27.1", features = ["derive"] }

async-stream = { version = "0.3.5" }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14" }
async-trait = {version="0.1.81"}

rusqlite = { version = "0.35.0", features = ["bundled"] }

polars = { version = "0.46.0", features = [
        "lazy",
        "ndarray",
        "dtype-time",
        "object",
        "round_series",
        "temporal",
        "pivot",
        "dynamic_group_by",
        "cum_agg",
        "serde",
        "list_to_struct",
        "decompress",
        "parquet",
        ]}

polars-lazy = {version = "0.46.0"}
polars-io = {version = "0.46.0", features=["avro", "parquet"]}
pyo3-polars = {version = "0.20.0"}
polars-arrow = {version = "0.46.0"}
arrow = {version = "55.1.0"}


parquet = "55.1.0"

numpy = { version = "0.23.0" }


ndarray = { version = "0.16.1" }

reqwest = { version = "0.12.2", features = ["blocking", "gzip", "stream"] }
futures = { version = "0.3" }
flate2 = { version = "1.0.24" }
#async-compression = {version="0.4.23", features = ["all"] }

csv = { version = "1.2.2" }
zip = { version = "3.0.0" }

tempfile = { version = "3.8.0" }

openssl = { version = "0.10.59", features = ["vendored"] }

url = { version = "2.4.0" }

rust_decimal = { version = "1.32.0" }
rust_decimal_macros = { version = "1.32.0" }

hmac = { version = "0.12.1" }
sha2 = { version = "0.10.7" }
hex = { version = "0.4.3" }

tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }

async-std = { version = "1.12", features = ["attributes"] }

socket2 = { version = "0.5.5" }
rmp-serde = { version = "1.1.2" }
once_cell = { version = "1.19.0" }

actix-web={version="4.5"}
actix-rt={version="2.9"}
