[package]
name = "rbot"
version = "0.2.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rbot"
crate-type = ["cdylib", "rlib"]

[dependencies]
rbot_lib = {path="../rbot_lib"}
rbot_session = {path="../rbot_session"}
#rbot_market = {workspace = "true"}


# https://pyo3.rs/v0.13.2/faq
[dependencies.pyo3]
version = "0.20"
features = ["rust_decimal", "auto-initialize", "abi3-py38"]

[features]
extension-module = ["pyo3/extension-module"]
#default = ["extension-module"]
