[package]
name = "rbot"
version = "0.1.4"       # for test pypi
# version = "0.4.0"     # for main release branch
edition = "2021"
exclude = ["test/**"]

[lib]
name = "rbot"
crate-type = ["cdylib", "rlib"]

[dependencies]
bybit = {path = "../exchanges/bybit"}
# binance = {path = "../exchanges/binance"}

rbot_lib = {path="../rbot_lib"}
rbot_session = {path="../rbot_session"}
rbot_server = {path="../rbot_server"}
rbot_market = {path="../rbot_market"}
once_cell = {workspace = true}

console-subscriber = {version="0.4.0"}

tracing = {workspace= true}
tracing-subscriber = {workspace= true}

# https://pyo3.rs/v0.13.2/faq
[dependencies.pyo3]
version = "0.21.2"
features = ["rust_decimal", "auto-initialize", "abi3-py38", "anyhow"]

[features]
extension-module = ["pyo3/extension-module"]
#default = ["extension-module"]
