[package]
name="rbot_lib" 
version="0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
thiserror = {workspace = true}
chrono = {workspace = true}
crossbeam-channel = {workspace = true}
log = {workspace = true}
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}

once_cell = {workspace = true}

serde = {workspace = true}
serde_derive = {workspace = true}
serde_json = {workspace=true}
serde_with = {workspace=true}
env_logger = {workspace = true}

polars = {workspace=true}
#polars-core = {workspace=true, features=["ndarray", "temporal", "dtype-time", "object", "round_series"]}
#polars-lazy = {workspace=true, features=["dynamic_group_by", "round_series", "pivot"]}
#polars-time = {workspace=true}
# polars-ops = {workspace=true}
pyo3-polars = {workspace=true}

strum_macros = {workspace=true}
strum = {workspace=true}
rmp-serde = {workspace=true}

hmac = {workspace=true}
sha2 = {workspace=true}
hex = {workspace=true}

numpy = {workspace=true}
rusqlite = {workspace=true}

tokio = {workspace=true}
async-std = {workspace=true}

ndarray = {workspace=true}
directories= {workspace=true}

socket2 = {workspace=true}

futures = {workspace=true}
flate2 = {workspace=true}
url = {workspace=true}

tokio-tungstenite = {workspace=true}

async-stream = {workspace = true}
async-trait = {workspace = true}

reqwest = {workspace=true, features=["gzip"]}
csv = {workspace=true}
zip = {workspace=true}

tempfile={workspace=true}

# https://pyo3.rs/v0.13.2/faq
[dependencies.pyo3]
version = "0.20.3"
features = ["rust_decimal", "auto-initialize", "abi3-py38", "anyhow"]

[features]
extension-module = ["pyo3/extension-module"]











#rusqlite = {version = "0.30.0", features=["bundled"]}











#openssl = { version = "0.10.59", features = ["vendored"] }





#tungstenite = {version="0.21", features=["native-tls"]}






#once_cell = {version="1.19.0"}


# https://pyo3.rs/v0.13.2/faq

#version = "0.20"
#features = ["rust_decimal", "auto-initialize", "abi3-py38"]

#[features]
#extension-module = ["pyo3/extension-module"]
#default = ["extension-module"]
