[package]
name = "bitbank"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rbot_lib = {workspace = true}
rbot_blockon = {workspace = true}
rbot_market = {workspace = true}

reqwest = {workspace=true}
anyhow = {workspace = true}

chrono = {workspace = true}
log = {workspace = true}
tracing = {workspace = true}

features = {workspace = true}

rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
serde = {workspace = true}
serde_derive = {workspace = true}
serde_json = {workspace = true}
json5 = {workspace = true}

crossbeam-channel = {workspace = true}
csv = {workspace = true}

polars = {workspace = true}
#polars-io = {workspace=true}

pyo3-polars = {workspace = true}

tokio = {workspace = true}
futures = {workspace=true}
async-stream = {workspace = true}

tempfile = {workspace=true}

pubnub = {workspace = true}

pyo3 = { workspace = true }


