[package]
name = "rbot_market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbot_lib={workspace = true}

anyhow = {workspace = true}

chrono= {workspace = true}
crossbeam-channel = {workspace = true}
csv = {workspace = true}
#
#polars = {workspace = true}
#polars-core = {workspace = true}
pyo3-polars = {workspace = true}

rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}

serde = {workspace = true}

tokio = {workspace = true}
tokio-stream = {workspace = true}



log = {workspace = true}    



pyo3 = { workspace = true }


